--- a/src/js/views/offers/search.html
+++ b/src/js/views/offers/search.html
@@ -1,18 +1,62 @@
+<!--  -->
+<div class="listShowContainer ">
+  <div class="tabContainer clearfix">
+    <span class="tab active" ng-class="{active:usersShow.tab == 1}" ng-click="usersShow.setTab(1)">What I'm looking for</span>
+    <span class="tab"></span>
+    <span class="tab"></span>
+    <span class="tab"></span>
+    <span class="tab"></span>
+  </div>
+  <p></p>
+  <!-- End of menu bar -->
 
-<div class="container">
-  <p>
-  <h1>Matching Results</h1>
-  Filter by price -- Filter by distance
-  </p>
-  <a ui-sref="offersShow({id: offer.id})"  ng-repeat="offer in offersSearch.offers">
-    <div class="homepageCard results">
-      <!-- {{ offer }} -->
-      <strong>Title </strong>{{ offer.title }}<br>
-      <!-- <strong>Body </strong>{{ offer.body }}<br> -->
-      <strong>Price: £ </strong>{{ offer.value }}.<br>
-      <img class="thumbnail" ng-src="{{ offer.image_src }}" alt="thumbnail"><br>
+  <!-- Tab One -->
+  <div>
+    <span class="listTitle">You currently have {{ offersSearch.offers.length }} results</span>
+    <div class="listShowlisting" ng-repeat="offer in offersSearch.offers" ui-sref="offersShow({id: offer.id})">
 
-      <button>More Details</button>
+      <div class="clearfix">
+        <div class="image">
+          <img class="image" ng-src="{{ offer.image_src }}" alt="Listing Image" >
+        </div>
+        <div class="content">
+          <div class="title">{{ offer.title }}</div>
+          <span>{{ offer.body | limitTo: 200 }}<span ng-if="offer.body.length > 200">...</span></span><br>
+          <!-- id: {{ offer.id }}<br> -->
+          <p>£{{ offer.value }}.</p>
+        </div>
+      </div>
+
+      <!-- Messages Section -->
+      <p></p>
+      <div class="results">
+        <strong>messages</strong> (red is what I send)
+        <div ng-class="{'outline messages_sent': usersShow.currentUser.id == message.sender_id, 'outline messages_recieved': usersShow.currentUser.id != message.sender_id}" ng-repeat="message in usersShow.currentUser.messages | orderBy : 'created_at'" ng-if="offer.id == message.offer_id">
+          <strong>Subject: </strong>{{ message.subject }}<br>
+          <strong>Body: </strong>{{ message.body }}<br>
+          <strong>Created at: </strong>{{ message.created_at }}<br>
+          <strong>Sender id: </strong>{{ message.sender_id }}<br>
+          <strong>Reciever id: </strong>{{ message.reciever_id }}<br>
+          <strong>advert_id: </strong>{{ message.advert_id }}<br>
+          <strong>offer_id: </strong>{{ message.offer_id }}<br>
+          <button ng-show="usersShow.currentUser.id != message.sender_id" class="ng-hide" ng-click="usersShow.setupReply(message)">Reply</button>
+        </div>
+      </div>
+      <!-- Messages Section -->
+      <!-- Reply to Messages section -->
+      <div class="results" ng-show="usersShow.toggleReply">
+        <strong>messages reply</strong>
+        <form ng-submit="usersShow.replyToMessage()" id="messageForm">
+          <label for="subject">Subject</label>
+          <input type="text" id="subject" name="subject" ng-model="usersShow.reply.subject">
+
+          <textarea rows="4" cols="90" name="comment" ng-model="usersShow.reply.body" form="messageForm">Enter text here...</textarea>
+          <button>Send</button>
+          <button ng-click="usersShow.clearReply()">Discard</button>
+        </form>
+        {{ usersShow.reply }}
+      </div>
+      <!-- Reply to Messages section -->
     </div>
-  </a>
+  </div>
 </div>
