--- a/src/js/views/adverts/edit.html
+++ b/src/js/views/adverts/edit.html
@@ -1,52 +1,68 @@
 <!-- <h1>adverts edit</h1> -->
 
 
-<div class="preview">
-  <strong>Title </strong>{{ advertsEdit.advert.title }}<br>
-  <strong>Body </strong>{{ advertsEdit.advert.body }}<br>
-  <strong>Price: £ </strong>{{ advertsEdit.advert.valueMin }} - {{ advertsEdit.advert.valueMax }}.
-  <!-- {{ advertsEdit.advert }} -->
-</div>
 
+
+<div class="listShowContainer ">
+
+  <div>
+    <span class="listTitle">What I want to buy - You currently have {{ usersShow.currentUser.adverts.length }} adverts</span>
+    <div class="listShowlisting"  ui-sref="advertsShow({id: advert.id})">
+
+    <div class="clearfix">
+      <div class="image">
+        <img ng-src="#">
+        </div>
+        <div class="content">
+          <div class="title">{{ advertsEdit.advert.title }}</div>
+          <span>{{ advertsEdit.advert.body }}</span><br>
+          <p>
+            <strong>Price range: </strong>£{{ advertsEdit.advert.valueMin }} to  £{{ advertsEdit.advert.valueMax }}.<br>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 <div class="listShowContainer ">
   <div class="tabContainer clearfix">
     <span class="tab active">Selling</span>
-    <span class="tab">Buying</span>
-    <span class="tab" ng-click="usersShow.setTab(3)"></span>
-    <span class="tab" ng-click="usersShow.setTab(4)"></span>
-    <span class="tab" ng-click="usersShow.setTab(5)"></span>
+    <span class="tab"></span>
+    <span class="tab"></span>
+    <span class="tab"></span>
+    <span class="tab"></span>
   </div>
   <p></p>
   <!-- End of menu bar -->
 
   <!-- Tab One -->
   <div>
-    <span class="listTitle">Create a new advert to sell your things...</span>
+    <span class="listTitle">Update your advert to sell your things...</span>
     <div class="newlisting">
       <form ng-submit="advertsEdit.update()">
         <p>
-          <label class="showTitle" for="title">Title</label>
+          <label class="showTitle" for="title">Title:</label>
           <input class="input" type="text" id="title" name="title" ng-model="advertsEdit.advert.title">
         </p>
 
         <p>
-          <label class="showTitle" for="body">body</label>
+          <label class="showTitle" for="body">Description: you can use markdown to add styling</label>
           <textarea class="inputArea" rows="4" cols="90" name="comment" ng-model="advertsEdit.advert.body">.</textarea>
         </p>
 
         <p>
           <label class="showTitle" for="valueMin">Price range £ :</label>
-          <input class="input" type="number" id="valueMin" name="valueMin" ng-model="advertsEdit.advert.valueMin">
-        </p>
-
-        <p>
+          <input class="priceInput" type="number" id="valueMin" name="valueMin" ng-model="advertsEdit.advert.valueMin">
           <label class="showTitle" for="valueMax">to</label>
-          <input class="input" type="number" id="valueMax" name="valueMax" ng-model="advertsEdit.advert.valueMax">
+          <input class="priceInput" type="number" id="valueMax" name="valueMax" ng-model="advertsEdit.advert.valueMax">
         </p>
 
+        <div class="padding"></div>
 
-        <button>Update</button><button ng-click="advertsEdit.delete()">Delete</button>
+        <button class="oneThirdButton">Update</button>
+        <button class="oneThirdButton" ui-sref="advertsShow({id: advertsEdit.advert.id})">Cancel</button>
+        <button class="oneThirdButton" ng-click="advertsEdit.delete()">Delete this advert</button>
       </form>
     </div>
   </div>
