got rid of doubled class=image tags

--- a/src/js/views/adverts/show.html
+++ b/src/js/views/adverts/show.html
@@ -47,7 +47,7 @@
     <div class="listShowlisting" ng-repeat="offer in advertsShow.offers" >
       <!-- ui-sref="offersShow({id: offer.id})" -->
       <div class="clearfix">
-        <div class="image">
+        <div>
           <img class="image" ng-src="{{ offer.image_src }}" alt="Listing Image" >
         </div>
         <div class="content">
