--- a/src/js/views/adverts/edit.html
+++ b/src/js/views/adverts/edit.html
@@ -10,8 +10,8 @@
     <div class="listShowlisting"  ui-sref="advertsShow({id: advert.id})">
 
     <div class="clearfix">
-      <div class="image">
-        <img ng-src="#">
+      <div>
+        <img class="image" ng-src="#">
         </div>
         <div class="content">
           <div class="title">{{ advertsEdit.advert.title }}</div>
