--- a/src/js/views/offers/search.html
+++ b/src/js/views/offers/search.html
@@ -16,7 +16,7 @@
     <div class="listShowlisting" ng-repeat="offer in offersSearch.offers" ui-sref="offersShow({id: offer.id})">
 
       <div class="clearfix">
-        <div class="image">
+        <div>
           <img class="image" ng-src="{{ offer.image_src }}" alt="Listing Image" >
         </div>
         <div class="content">
