a few small styling changes and added user info to advertsShow - a copy of usersShow

--- a/src/js/views/adverts/edit.html
+++ b/src/js/views/adverts/edit.html
@@ -11,7 +11,7 @@
 
     <div class="clearfix">
       <div>
-        <img class="image" ng-src="#">
+        <img class="image" src="../images/yabeetwo.png">
         </div>
         <div class="content">
           <div class="title">{{ advertsEdit.advert.title }}</div>
