--- a/src/js/views/adverts/new.html
+++ b/src/js/views/adverts/new.html
@@ -55,7 +55,7 @@
           <input class="input" type="number" id="valueMax" name="valueMax" ng-model="advertsNew.advert.valueMax" placeholder="1,000,000">
         </p>
 
-        <button>Create</button><button ui-sref="home">Discard</button>
+        <button class="oneHalfButton">Create</button><button class="oneHalfButton" ui-sref="home">Discard</button>
       </form>
 
     </div>
