--- a/src/js/views/users/show.html
+++ b/src/js/views/users/show.html
@@ -27,7 +27,7 @@
       <div ui-sref="advertsShow({id: advert.id})">
         <div class="clearfix">
           <div>
-            <img class="image" ng-src="#">
+            <img class="image" src="../images/noimage.png">
           </div>
           <div class="content">
             <div class="title">{{ advert.title }}</div>
@@ -141,15 +141,15 @@
       <div>
         <div class="clearfix">
           <div>
-            <img class="image" ng-src="{{ offer.image_src }}" alt="Profile Image" >
+            <img class="image" src="../images/profile.gif" alt="Profile Image" >
           </div>
           <div class="content">
             <div class="title">{{ usersShow.currentUser.username }}</div>
             <div class="title"></div>
             <div class="title"></div>
-            <span>{{ usersShow.currentUser.email | limitTo: 30 }}<span ng-if="offer.body.length > 200">...</span></span><br>
-            <span>0{{ usersShow.currentUser.phoneNumber }}</span><br>
-            <span>{{ usersShow.currentUser.address }}</span><br>
+            <span>email: {{ usersShow.currentUser.email | limitTo: 30 }}<span ng-if="offer.body.length > 200">...</span></span><br>
+            <span>tel. 0{{ usersShow.currentUser.phoneNumber }}</span><br>
+            <span>address: {{ usersShow.currentUser.address }}</span><br>
           </div>
         </div>
       </div>
